# sia

./: README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
docs/: configuration.md  troubleshooting.md  walkthrough.md
sia/: RL_INTEGRATION_GUIDE.md  __init__.py  __main__.py  agent_reference.py  api_keys.py  cli.py  config.py  config_files.py  context_manager.py  io_utils.py  layout.py  logging_setup.py  orchestrator.py  profiles.py  prompts.py  providers.py  results.py  run_setup.py  util.py
sia/agent_impls/: __init__.py  base.py  claude.py  openhands.py  pydantic_ai.py
sia/defaults/profiles/: default-meta.json  default-target.json  gemini-meta.json  gptoss-nebius-target.json  gptoss-tinker-target.json  kimi-nebius-meta.json  kimi-nebius-target.json  qwen-nebius-target.json  qwen3-tinker-target.json
sia/defaults/providers/: anthropic.json  gemini.json  nebius.json  openai.json  tinker.json  together.json
sia/tasks/gpqa/reference/: reference_target_agent.py
sia/web/: __init__.py  runs.py  server.py
sia/web/static/: index.html
tests/: conftest.py  golden_master.py  test_agent_impls.py  test_agent_reference.py  test_cli_interface.py  test_config.py  test_config_injection.py  test_context_golden.py  test_context_manager.py  test_feedback_context_golden.py  test_generation_loop.py  test_load_execution_formats.py  test_profiles.py  test_prompts_snapshot.py  test_providers.py  test_run_evaluation.py  test_run_evaluation_outcomes.py  test_sandbox.py  test_size_limits.py  test_task_structure.py  test_web.py
tests/golden/: context.md  feedback_context_failure_single.txt  feedback_context_success_multi.txt  feedback_context_success_single.txt  feedback_prompt.txt  meta_prompt.txt  meta_prompt_openai.txt
